--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,7 @@
 .header {
-  background-color: #ccc;
+  background-color: #eee;
   padding: 20px 10px;
-  box-shadow: 10px 10px 5px lightblue;
-  
+  box-shadow: 0px 10px 6px #ccc;
+  display: flex;
+  align-items: center;
 }
