--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,7 +1,9 @@
 .button {
   border: none;
   padding: 12px 8px;
-  border-radius: 4px;
+  border-radius: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   cursor: pointer;
   display: flex;
   align-items: center;
