--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,9 +1,10 @@
 .footer {
   text-align: center;
-  color: white;
+  color: black;
   font-size: 20px;
-  margin-top: 500px;
+  margin-top: 446px;
   background-color: rgb(213, 1, 255);
   padding: 20px 10px;
-  box-shadow: 0px 10px 6px #ccc;
+  background-color: #eee;
+  box-shadow: 50px 0px 6px #ccc;
 }
