--- a/src/Components/Counter/Counter.css
+++ b/src/Components/Counter/Counter.css
@@ -1,3 +1,11 @@
 .counter {
+  border: 2px solid black;
+  width: 30%;
+  height: 150px;
+  display: flex;
+  justify-content: center;
   align-items: center;
+  margin: auto;
+  margin-top: 100px;
+  border-radius: 20px;
 }
