--- a/src/Components/Counter/Counter.css
+++ b/src/Components/Counter/Counter.css
@@ -9,3 +9,14 @@
   margin-top: 100px;
   border-radius: 20px;
 }
+.limit {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  margin-left: 230px;
+}
+.limitbox {
+  display: flex;
+  align-items: center;
+  margin-left: 230px;
+}
